# fakeroot

./: Makefile.am  communicate-sysv.c  communicate-tcp.c  communicate.c  communicate.h  configure.ac  faked.c  libfakeroot.c  ostree.c  wrapfunc.inp
scripts/: fakeroot.in
test/: compare-tar  defs.in  t.chmod_dev  tartest  wronly-test.c
